--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,4 +1,5 @@
 <a id="logo" href="https://sensorimotor.de">
-	<h3 class="logo">Sensorimotor</h3>
-	<img src="Logo.png" alt="Logo"/>
+	<div h3 class="logo">
+	<img src="/images/Logo.png" alt="Logo"/>
+</div>
 </a>
