--- a/themes/hugo-theme-learn/static/css/theme-sensorimotor.css
+++ b/themes/hugo-theme-learn/static/css/theme-sensorimotor.css
@@ -1,33 +1,32 @@
 :root{
     
-    --MAIN-TEXT-color:#F8F8FF; /* Color of text by default */
-    --MAIN-TITLES-TEXT-color: #FF1499 ; /* Color of titles h2-h3-h4-h5 */
-    --MAIN-LINK-color:#FF1499; /* Color of links */
+    --MAIN-TEXT-color:#000000; /* Color of text by default */
+    --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
+    --MAIN-LINK-color:#FF1495; /* Color of links */
     --MAIN-LINK-HOVER-color:#167ad0; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #FF1499; /* color of anchors on titles */
+    --MAIN-ANCHOR-color: #1C90F3; /* color of anchors on titles */
 
     --MENU-HEADER-BG-color:#000000; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#000000; /*Color of menu header border */ 
+    --MENU-HEADER-BORDER-color:#FF1495; /*Color of menu header border */ 
 
-    --MENU-SEARCH-BG-color:#000000; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #FF1499; /* Override search field border color */
-    --MENU-SEARCH-BOX-ICONS-color:##FF1499 /* Override search field icons color */
+    --MENU-SEARCH-BG-color:#252c31; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BOX-color: #FF1495; /* Override search field border color */
+    --MENU-SEARCH-BOX-ICONS-color: #FF1495; /* Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#000000; /* Background color of the active section and its childs */
-    --MENU-SECTIONS-BG-color:#000000; /* Background color of other sections */
-    --MENU-SECTIONS-LINK-color: #FF1499; /* Color of links in menu */
+    --MENU-SECTIONS-ACTIVE-BG-color:#20272b; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-BG-color:#252c31; /* Background color of other sections */
+    --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
-    --MENU-SECTION-ACTIVE-CATEGORY-color: #FF1499; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #808080; /* Color of background for the active category (only) */
+    --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
+    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #fff; /* Color of background for the active category (only) */
 
-    --MENU-VISITED-color: #FF1499; /* Color of 'page visited' icons in menu */
-    --MENU-SECTION-HR-color: #FF1499; /* Color of <hr> separator in menu */
+    --MENU-VISITED-color: #33a1ff; /* Color of 'page visited' icons in menu */
+    --MENU-SECTION-HR-color: #20272b; /* Color of <hr> separator in menu */
     
 }
 
 body {
     color: var(--MAIN-TEXT-color) !important;
-	background-color: #000000
 }
 
 textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, select[multiple=multiple]:focus {
@@ -36,12 +35,11 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 }
 
 h1 {
-    color: var(--MAIN-TITLES-TEXT-color) !important;
-	font-weight: bold;
-	}
-
+	text-align="center";
+}
 h2, h3, h4, h5 {
     color: var(--MAIN-TITLES-TEXT-color) !important;
+	text-align: center;
 }
 
 a {
@@ -54,11 +52,6 @@ a {
 
 a:hover {
     color: var(--MAIN-LINK-HOVER-color);
-}
-
-#chapter h1 {
-	font-size: 5rem;
-	border-bottom: 4px solid #FF1499;
 }
 
 #sidebar ul li.visited > a .read-icon {
@@ -112,7 +105,22 @@ a:hover {
     border-color: var(--MENU-SECTION-HR-color);
 }
 
-.page{
-background: #000000;	
+/**************************************************************
+* Unsere styles
+**************************************************************/
 
+.mainpage_header{
+	background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/images/mainpage_header_pic.jpg");
+	margin: 0 auto;
+	padding: 50px;
+	color: #fff;
+	background-size: cover;
+	border-radius: 5px;
+	text-shadow: #000 0 0 5px;
+	font-weight: bold;
+}
+
+.content-spacing {
+	max-width: 1024px;
+	margin: 0 auto;
 }
