--- a/themes/hugo-theme-learn/static/css/theme-sensorimotor.css
+++ b/themes/hugo-theme-learn/static/css/theme-sensorimotor.css
@@ -27,6 +27,7 @@
 
 body {
     color: var(--MAIN-TEXT-color) !important;
+	text-align: center
 }
 
 textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, select[multiple=multiple]:focus {
@@ -123,4 +124,12 @@ a:hover {
 .content-spacing {
 	max-width: 1024px;
 	margin: 0 auto;
+}
+
+#chapter h1{
+	border-bottom-color:#FF1495;
+}
+
+#breadcrumbs {
+	text-align: left;
 }
