--- a/themes/hugo-theme-learn/layouts/partials/menu.html
+++ b/themes/hugo-theme-learn/layouts/partials/menu.html
@@ -24,11 +24,15 @@
           {{end}}
         {{end}} 
     </ul>
-
-    {{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
+	<ul>
+		<li>
+			<h5 style="text-align:left">&nbsp; More</h5>
+    </ki>
+	</ul>
+	{{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
     {{with .Site.Menus.shortcuts}}
       <section id="shortcuts">
-        <h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
+		<h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
         <ul>
           {{ range sort . "Weight"}}
               <li> 
