--- a/themes/hugo-theme-learn/static/css/theme-sensorimotor.css
+++ b/themes/hugo-theme-learn/static/css/theme-sensorimotor.css
@@ -43,6 +43,11 @@ h2, h3, h4, h5 {
 	text-align: center;
 }
 
+table {
+    width: auto;
+    margin: auto;
+}
+
 a {
     color: var(--MAIN-LINK-color);
 }
